feat(workflows): add chore/maintenance workflow
Adds new workflow for maintenance tasks like dependency updates, config changes, and cleanup.

New Workflow: chore.yml (v1.0.0)
- Fast workflow for low-risk maintenance tasks
- Minimal overhead (5-15 minutes)
- Optional validation for low-risk changes

Phases:
1. Load Context - Load project memory
2. Execute - Run maintenance task
3. Validate - Quick validation (optional)
4. Learn - Pattern learning (optional)

Use Cases:
- Dependency updates (npm, pip, etc.)
- Configuration changes (eslint, prettier, tsconfig)
- Cleanup tasks (remove unused files, organize imports)
- Documentation updates (minor README changes)
- CI/CD updates (GitHub Actions, hooks)

i18n Support:
- pt-BR: "Tarefa de Manutenção"
- en-US: "Maintenance Task"

Triggers:
Keywords: chore, update, upgrade, cleanup, maintain, dependency, deps
Complexity: small, medium

This completes the workflow collection:
- feature-full: Complex features (60-120 min)
- feature-quick: Medium features (30-45 min)
- feature-tdd: TDD strict workflow
- bugfix: Quick bug fixes (10-20 min)
- hotfix: Emergency fixes (< 10 min)
- refactor: Code refactoring (20-40 min)
- code-review: Review only (5-10 min)
- spike: Investigation (variable)
- migration: Database migrations (15-30 min)
- performance: Performance optimization (30-60 min)
- documentation: Documentation (10-30 min)
- chore: Maintenance tasks (5-15 min) ← NEW

Part of: Nexus v2.0.0 restructuring
Related: Phase 7 (commit e949eca)

--- a/config/i18n/en-US.yml
+++ b/config/i18n/en-US.yml
@@ -144,6 +144,10 @@ workflows:
     name: "Code Review"
     description: "Review without implementation"
 
+  chore:
+    name: "Maintenance Task"
+    description: "Maintenance tasks: dependencies, configs, cleanup"
+
 # Error Messages
 errors:
   workflow_not_found: "Workflow not found"
